--- a/es6_function/1.md
+++ b/es6_function/1.md
@@ -51,7 +51,7 @@
   ```js
   const routine = ref => ({...ref, d:7});
   const ref = { a: 1, b: 2, c: 3, d:4 };
-  const a = rountine(ref);
+  const a = routine(ref);
   ref !== a //true
   ```
 
@@ -131,7 +131,7 @@
 
 - Sequential
   - 실행순서가 밀접하게 연결되고, 프로시져와 커뮤니케이셔널을 합쳐놓은것.
-  - 빌더 패턴
+  - `빌더 패턴`
   - 앞에 실행결과와 뒤에 실행결과가 밀접하게 연결되어 있는것. 채이닝되는 코드
 
 - Functional
