--- a/es6_function/1.md
+++ b/es6_function/1.md
@@ -40,20 +40,21 @@
   - 값 만을 사용하면 플로우 내에 서로 다른 루틴끼리 영향을 주지 않는다. - state safe - 상태 안전
   - 함수형 프로그래밍 - 값을 컨택스트로 사용한다.
   - 값과 값으로만 되어 있는 함수를 짜자~
-  - 참조가 넘어오는것은 어쩔수 없지만 Read only로 사용하자.
-  ```js
-  const routine = ({a, b, ...rest}) => rest;
-  const ref = { a: 1, b: 2, c: 3, d:4 };
-  const a = routine(ref);
-  ref !== a //true
-  ```
-  - 지역 변수를 만들때도 새로운 Object로 
-  ```js
-  const routine = ref => ({...ref, d:7});
-  const ref = { a: 1, b: 2, c: 3, d:4 };
-  const a = routine(ref);
-  ref !== a //true
-  ```
+  - 참조를 사용 할 때
+    - `참조가 넘어오는것은 어쩔수 없지만 Read only로 사용하자.`
+    ```js
+    const routine = ({a, b, ...rest}) => rest;
+    const ref = { a: 1, b: 2, c: 3, d:4 };
+    const a = routine(ref);
+    ref !== a //true
+    ```
+    - `지역 변수를 만들때도 새로운 Object로 사용하자.`
+    ```js
+    const routine = ref => ({...ref, d:7});
+    const ref = { a: 1, b: 2, c: 3, d:4 };
+    const a = routine(ref);
+    ref !== a //true
+    ```
 
 
 # Structured Design 
