--- a/es6_function/1.md
+++ b/es6_function/1.md
@@ -84,7 +84,7 @@
   - 플래그형 변수 - 오더를 내리기 위한 기호 변수를 넘기는 것
   - 플래그 변수가 흐름제어를 관여하게 된다.
   - 팩토리 패턴에서 가장 많이 일어나는 오류
-  - 진짜 팩토리 패턴을 만들려면, 추상 팩토리 패턴을 만들어야 한다.
+  - 진짜 팩토리 패턴을 만들려면, `추상 팩토리 패턴`을 만들어야 한다.
   - `어떻게 해체 하는가? - 전략 패턴을 이용하면 된다.`
 
 - Stamp - 강결합, 유사악결합
