--- a/object/20190709.md
+++ b/object/20190709.md
@@ -49,6 +49,22 @@ class
     - 단점: 모든 경우의 수를 파악할 수 없다.
     - if의 변화율을 클라이언트에서만 하도록 분리하고, 비지니스 로직 단에서는 변화되지 않도록 설계한다.
     - 변화율에 따라 분리를 한다.
-    
 
+
+## Responsibility Driven
+ value = responsibility
+- 시스템의 존재 가치는 사용자에게 제공되는 기능
+- 사용자가 사용할 기능 = 시스템의 책임
+- 시스템 차원의 책임을 더 작은 단위의 책임으로 분할
+- 해당 책임을 추상화하여 역할을 정의함
+  - 책임과 역할을 따로 생각할수 있는게 어렵고 
+    공통을 뽑아서 역할을 정의하는 것이 어렵다.
+    사례를 보고 추상화하는것, 여러 사례에서 추상화한것을 가지고 귀납적인 사례 다른 사례들을 만들어 낼 수 있다.
+
+
+
+## Theater with Responsibility
+- 정보 전문가 패턴은 책임이 누구인가는 제일 많이 알고 있는 객체에게 시키는 것, 역할이 이해하기 어려워짐.
+- 객체는 객체 관계를 가지고 있으면 참조 객체를 보내주면 되는것~
+- 
 
