--- a/object/20190709.md
+++ b/object/20190709.md
@@ -66,5 +66,12 @@ class
 ## Theater with Responsibility
 - 정보 전문가 패턴은 책임이 누구인가는 제일 많이 알고 있는 객체에게 시키는 것, 역할이 이해하기 어려워짐.
 - 객체는 객체 관계를 가지고 있으면 참조 객체를 보내주면 되는것~
-- 
+- 클라이언트 코드에서 도메인 검증을 충분히 한다.
+- `객체만이 ... 60:00`
+
+제네릭 타입, 상속으로 구현...
+컨디션의 조건을 인터페이스로 빼내서 구상 클래스로 바꾸는것..
+implements ~ 구상 클래스로 조건
+
+
 
